// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the form error component. 1`] = `null`;

exports[`Testing the form error component. 2`] = `
<div
  className="alert-success m-auto m-0 mt-4 mb-4"
  role="alert"
>
  <div
    className="flex"
  >
    <div
      className="py-1 pr-4"
    >
      <i
        className="fal fa-check text-2xl"
      />
    </div>
    <div>
      <p
        className="text-2xl"
      >
        This an error
      </p>
    </div>
  </div>
</div>
`;

exports[`Testing the form error component. 3`] = `
<div
  className="alert-success m-auto m-0 mt-4 mb-4"
  role="alert"
>
  <div
    className="flex"
  >
    <div
      className="py-1 pr-4"
    >
      <i
        className="fal fa-check text-2xl"
      />
    </div>
    <div>
      <p
        className="text-2xl"
      >
        This a success message
      </p>
    </div>
  </div>
</div>
`;
